--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Meu Portefólio</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="./script.js"></script>
 
 </head>
 <body>
